--- a/css/03 modelo-caja/ejer2-caja2.html
+++ b/css/03 modelo-caja/ejer2-caja2.html
@@ -1,26 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="ejer2-caja2.css">
+    <title>EJERCICIO 2</title>
+    <link rel="stylesheet" href="ejer2-caja3.css">
 </head>
 <body>
     <main>
-        <header>
-            hola
-        </header>
-        
-        <article class="arriba">
-            
-        </article>
-        <article class="img">
-            <img src="/css/03 modelo-caja/foto.png" alt="foto">
-        </article>
-        <footer>
-            esta plantilla la hice yo
-        </footer>
+        <div class="uno">
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga provident mollitia, cum cumque quod nam!
+        </div>
+        <section>
+            <div class="dos">
+                Lorem ipsum dolor,etectetur adipisicing elit. Ratione ut exercitationem plentore. 
+            </div>
+        </section>
+        <div class="tres">
+            <h1>Nombre de la empresa</h1>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consectetur, dolorem? Quo repudiand</p>
+        </div>
+        <div class="cuatro">
+            <p id="negro">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consectetur, dolor</p>
+            <b>Lorem ipsum dolor sit amet consectetur, adipisicium, quam!</b>
+        </div>
     </main>
 </body>
 </html>
