--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
         <li><b>Mi CV:</b> <a href = "01 introduccion/review27oct.html" target = "_blank">Mi Curriculum Vitae</a></li>
         <br> <br>
         <li><b>Desempleo en España:</b><a href = "03 tablas/ejercicio-paises.html" target = "_blank"> Reporte de desempleo</a></li>
-        <li><b>Mi CV:</b> <a href = "https://juanjose130303.github.io/html//css/FLEX/ejercicio.html" target = "_blank">ejercicio flex box</a></li>
-        <li><b>Mi CV:</b> <a href = "https://juanjose130303.github.io/html//css/FLEX/otro-2.html" target = "_blank">ejercicio 2</a></li>
-        <li><b>Mi CV:</b> <a href = "https://juanjose130303.github.io/html//css/FLEX/otro-review.html" target = "_blank">ejercicio 1</a></li>
-        <li><b>Mi CV:</b> <a href = "https://juanjose130303.github.io/html//css/FLEX/review-15.html" target = "_blank">ejercicio review</a></li>
+        <li><b>Mi CV:</b> <a href = "https://juanjose130303.github.io/html/css/FLEX/ejercicio.html" target = "_blank">ejercicio flex box</a></li>
+        <li><b>Mi CV:</b> <a href = "https://juanjose130303.github.io/html/css/FLEX/otro-2.html" target = "_blank">ejercicio 2</a></li>
+        <li><b>Mi CV:</b> <a href = "https://juanjose130303.github.io/html/css/FLEX/otro-review.html" target = "_blank">ejercicio 1</a></li>
+        <li><b>Mi CV:</b> <a href = "https://juanjose130303.github.io/html/css/FLEX/review-15.html" target = "_blank">ejercicio review</a></li>
         </ul>
 
 </body>
