clase 16 de noviembre

--- a/css/grid/review16-2.html
+++ b/css/grid/review16-2.html
@@ -7,16 +7,31 @@
     <link rel="stylesheet" href="review16-2.css">
 </head>
 <body>
-    <div class="container">
-        <div class="item1"><h1>Grid <br>layout IV</h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit quas quis assumenda libero eligendi, nobis perferendis laudantium harum quae repudiandae similique eius animi et autem cumque, nam amet reprehenderit. Ullam ducimus esse laudantium at consequuntur! Consequuntur corrupti, aliquid amet consectetur distinctio ea libero omnis rem quas reprehenderit molestias, dolores facilis!</div>
-        <div class="item2"></div>
-        <div class="item3"></div>
-        <div class="item4"></div>
-        <div class="item5"></div>
-        <div class="item6"></div>
-        <div class="item7"></div>
-        <div class="item8"></div>
-        <div class="item9"></div>
-    </div>
+    <body>
+        <div class="container">
+            <div class="grid item1">
+                <div class="grid1"><h1>Grid <br>layout IV</h1><br>lorem</div>
+            </div>
+            <div class="grid item2"></div>
+            <div class="grid item3">
+                <img src="../grid/IMG/icon-megaphone.png" alt="">
+            </div>
+            <div class="grid item4">
+                <img src="../grid/IMG/icon-bicycle.png" alt="">
+            </div>
+            <div class="grid item5">
+                <img src="../grid/IMG/icon-bug.png" alt="">
+            </div>
+            <div class="grid item6">
+                <img src="../grid/IMG/icon-fast-food.png" alt="">
+            </div>
+            <div class="grid item7"></div>
+            <div class="grid item8">
+                <img src="../grid/IMG/icon-game-controller.png" alt="">
+            </div>
+            <div class="grid item9"></div>
+        </div>
+    </body>
+    </html>
 </body>
 </html>
