--- a/css/proyecto/contactanos.html
+++ b/css/proyecto/contactanos.html
@@ -128,6 +128,7 @@
 
     <div id="home-link">
         <a href="index.html">Volver a la Página Principal</a>
+        <a href="form.html">Ir a la Página de Formulario</a>
     </div>
 
 </body>
