--- a/css/proyecto/index.html
+++ b/css/proyecto/index.html
@@ -4,292 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Elo Boost Services</title>
-    <style>
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #000;
-            color: #fff;
-            transition: background-color 0.5s;
-        }
-
-        header, nav, section, footer {
-            padding: 20px;
-            transition: padding 0.5s;
-        }
-
-        header {
-            background-color: #333;
-            color: #fff;
-            text-align: center;
-            position: relative;
-            overflow: hidden;
-        }
-
-        #logo-container {
-            text-align: center;
-            margin-top: 20px;
-        }
-
-        #logo {
-            font-size: 2em;
-            color: #4CAF50;
-            transition: color 0.5s;
-            cursor: pointer;
-        }
-
-        #logo:hover {
-            color: #45a049;
-        }
-
-        nav {
-            background-color: #444;
-            text-align: center;
-        }
-
-        nav a {
-            color: #fff;
-            text-decoration: none;
-            padding: 10px;
-            margin: 0 10px;
-            transition: color 0.5s;
-        }
-
-        nav a:hover {
-            color: #4CAF50;
-        }
-
-        section {
-            padding: 50px 20px; /* Aumenté el espacio de relleno para una apariencia más espaciosa */
-            text-align: center;
-            transition: padding 0.5s;
-        }
-
-        section#home {
-            background-image: url('tu-imagen-de-fondo.jpg'); /* Reemplaza con la URL de tu imagen de fondo */
-            background-size: cover;
-            background-position: center;
-            color: #fff;
-            padding: 50px;
-            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
-        }
-
-        section#home h2 {
-            font-size: 2.5em;
-            margin-bottom: 20px;
-        }
-
-        section#home p {
-            font-size: 1.2em;
-            line-height: 1.6;
-        }
-
-        #subpage2 {
-    background-color: #1a1a1a;
-    color: #fff;
-    padding: 50px 0;
-}
-
-.game-guide {
-    max-width: 800px;
-    margin: 0 auto;
-    text-align: left;
-}
-
-.game-guide h3 {
-    color: #4CAF50;
-}
-
-.game-guide p {
-    margin-bottom: 20px;
-}
-
-.game-guide ul {
-    display: flex;
-    flex-wrap: wrap;
-    padding: 0;
-    margin: 0;
-    list-style-type: none;
-}
-
-.game-guide ul li {
-    width: calc(50% - 20px); /* Ajustar el ancho de los elementos en pantallas grandes */
-    margin: 1%;
-    box-sizing: border-box;
-}
-
-@media (max-width: 768px) {
-    .game-guide ul li {
-        width: 100%; /* Cambiar a un diseño de una columna en pantallas más pequeñas */
-    }
-}
-
-.game-guide video {
-    width: 100%;
-    height: auto;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    transition: transform 0.3s;
-}
-
-.game-guide video:hover {
-    transform: scale(1.05);
-}
-
-
-
-
-        footer {
-            background-color: #333;
-            color: #fff;
-            text-align: center;
-            padding: 20px;
-            transition: background-color 0.5s, padding 0.5s;
-            clear: both;
-        }
-
-        form {
-            max-width: 600px;
-            margin: 0 auto;
-            background-color: #333;
-            padding: 30px;
-            border-radius: 10px;
-            margin-top: 20px;
-            transition: background-color 0.5s, padding 0.5s;
-            text-align: left;
-        }
-
-        label {
-            display: block;
-            margin-bottom: 10px;
-            color: #fff;
-            transition: color 0.5s;
-        }
-
-        input, textarea {
-            width: 100%;
-            padding: 10px;
-            margin-bottom: 15px;
-            border: 1px solid #fff;
-            border-radius: 5px;
-            background-color: #1a1a1a;
-            color: #fff;
-            transition: background-color 0.5s, color 0.5s;
-        }
-
-        input[type="submit"] {
-            background-color: #4CAF50;
-            color: #fff;
-            cursor: pointer;
-            transition: background-color 0.5s;
-        }
-
-        input[type="submit"]:hover {
-            background-color: #45a049;
-        }
-
-        @keyframes moveBackground {
-            from {
-                background-position: 0 0;
-            }
-            to {
-                background-position: 100% 0;
-            }
-        }
-
-        /* Agregado para la galería de videos en la Subpágina 1 */
-        .gallery {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-            gap: 15px;
-            margin-top: 20px;
-        }
-
-        .gallery video {
-            width: 100%;
-            height: auto;
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            transition: transform 0.3s;
-        }
-
-        .game-guide video {
-            width: 100%;
-            height: auto;
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            transition: transform 0.3s;
-        }
-
-        .game-guide video:hover {
-            transform: scale(1.05);
-        }
-
-        .search-box {
-            width: 100%;
-            max-width: 400px;
-            margin: 20px auto; /* Alinear al centro horizontalmente */
-            padding: 20px;
-            background-color: #333;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-            transition: transform 0.3s, box-shadow 0.3s;
-        }
-
-        .search-box:hover {
-            transform: scale(1.05);
-            box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
-        }
-
-        .search-box label {
-            display: block;
-            margin-bottom: 10px;
-            color: #4CAF50;
-            font-size: 1.2em;
-            text-align: center;
-            font-weight: bold;
-            letter-spacing: 1px;
-            text-transform: uppercase;
-            transition: color 0.5s;
-        }
-
-        .search-box input[type="text"] {
-            width: 100%;
-            padding: 10px;
-            border: 1px solid #fff;
-            border-radius: 5px;
-            background-color: #1a1a1a;
-            color: #fff;
-            transition: background-color 0.5s, color 0.5s;
-            margin-bottom: 10px;
-            outline: none;
-        }
-
-        .search-box input[type="text"]:focus {
-            background-color: #333;
-        }
-
-        .search-box button {
-            width: 100%;
-            padding: 10px;
-            background-color: #4CAF50;
-            color: #fff;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: background-color 0.5s;
-            outline: none;
-        }
-
-        .search-box button:hover {
-            background-color: #45a049;
-        }
-
-        .search-box button:active {
-            transform: scale(0.95);
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -298,9 +13,9 @@
     </header>
 
     <nav>
-        <a href="#home">Inicio</a>
+        <a href="#logo">Inicio</a>
         <a href="#services">Servicios</a>
-        <a href="#contact.html">Contacto</a>
+        <a href="contactanos.html">Contacto</a>
         <a href="#subpage1">Contenido Exclusivo</a>
         <a href="#subpage2">Exploracion Sorprendente</a>
     </nav>
@@ -325,9 +40,6 @@
     </section>
     
 
-    
-
-    <!-- Añadir esto en la sección correspondiente a la Subpágina 1 -->
     <section id="subpage1">
         <h2>Contenido Exclusivo</h2>
         <p>Descubre contenido exclusivo en nuestra primera subpágina.</p>
