--- a/css/proyecto/form.html
+++ b/css/proyecto/form.html
@@ -4,122 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Elo Boost Services</title>
-    <style>
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #000;
-            color: #fff;
-        }
-
-        header {
-            background-color: #333;
-            color: #fff;
-            padding: 20px;
-            text-align: center;
-        }
-
-        #logo {
-            font-size: 2em;
-            color: #4CAF50;
-            cursor: pointer;
-        }
-
-        nav {
-            background-color: #444;
-            text-align: center;
-        }
-
-        nav a {
-            color: #fff;
-            text-decoration: none;
-            padding: 10px;
-            margin: 0 10px;
-        }
-
-        section {
-            padding: 20px;
-            text-align: center;
-        }
-
-        form {
-            max-width: 600px;
-            margin: 0 auto;
-            background-color: #333;
-            padding: 30px;
-            border-radius: 10px;
-            margin-top: 20px;
-            text-align: left;
-        }
-
-        label {
-            display: block;
-            margin-bottom: 10px;
-            color: #fff;
-        }
-
-        input, textarea {
-            width: 100%;
-            padding: 10px;
-            margin-bottom: 15px;
-            border: 1px solid #fff;
-            border-radius: 5px;
-            background-color: #1a1a1a;
-            color: #fff;
-        }
-
-        input[type="submit"] {
-            background-color: #4CAF50;
-            color: #fff;
-            cursor: pointer;
-        }
-
-        input[type="submit"]:hover {
-            background-color: #45a049;
-        }
-
-        a {
-            color: #4CAF50;
-            text-decoration: none;
-            display: block;
-            margin-top: 10px;
-            transition: color 0.5s;
-        }
-
-        a:hover {
-            color: #45a049;
-        }
-
-        footer {
-            background-color: #333;
-            color: #fff;
-            text-align: center;
-            padding: 20px;
-            clear: both;
-        }
-
-        /* Estilos para dispositivos móviles */
-        @media only screen and (max-width: 600px) {
-            form {
-                padding: 15px;
-            }
-        }
-
-        /* Estilos para tabletas */
-        @media only screen and (min-width: 601px) and (max-width: 1024px) {
-            form {
-                padding: 20px;
-            }
-        }
-
-        /* Estilos para pantallas más grandes (desktop) */
-        @media only screen and (min-width: 1025px) {
-            form {
-                padding: 30px;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="form.css">
 </head>
 <body>
 
