--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <li><b>Mi CV:</b> <a href = "https://juanjose130303.github.io/html/css/FLEX/otro-2.html" target = "_blank">ejercicio 2</a></li>
         <li><b>Mi CV:</b> <a href = "https://juanjose130303.github.io/html/css/FLEX/otro-review.html" target = "_blank">ejercicio 1</a></li>
         <li><b>Mi CV:</b> <a href = "https://juanjose130303.github.io/html/css/FLEX/review-15.html" target = "_blank">ejercicio review</a></li>
+        <li><b>elo boost</b> <a href = "https://juanjose130303.github.io/html/css/proyecto/index.html" target = "_blank">proyecto elo boost</a></li>
         </ul>
-
 </body>
 </html> 
