--- a/css/proyecto/contactanos.html
+++ b/css/proyecto/contactanos.html
@@ -20,11 +20,11 @@
 
     <section>
         <h2>Nuestra Historia</h2>
-        <p>Breve descripción de quiénes somos y nuestra historia.</p>
+        <p>buscamos qur todos los jugadores puedan alcanzar sus sueños</p>
 
         <h2>Contacto</h2>
-        <p>Número de Contacto: +XX XXXX XXXX</p>
-        <p>Correo de Contacto: info@tudominio.com</p>
+        <p>Número de Contacto: +57 322 7099 068</p>
+        <p>Correo de Contacto: leagueoflegends@eloboost.com</p>
 
 
     </section>
