--- a/css/proyecto/services.html
+++ b/css/proyecto/services.html
@@ -19,61 +19,61 @@
     <section class="league">
         <h2>Hierro</h2>
         <img src="iron (1).png" alt="no se ve">
-        <p>Precio: $XX</p>
+        <p>Precio: 20$</p>
     </section>
 
     <section class="league">
         <h2>Bronce</h2>
         <img src="bronce.png" alt="no se ve">
-        <p>Precio: $XX</p>
+        <p>Precio: 50$</p>
     </section>
 
     <section class="league">
         <h2>Plata</h2>
         <img src="silver.png" alt="">
-        <p>Precio: $XX</p>
+        <p>Precio: 70$</p>
     </section>
 
     <section class="league">
         <h2>Oro</h2>
         <img src="gold.png" alt="">
-        <p>Precio: $XX</p>
+        <p>Precio: 100$</p>
     </section>
 
     <section class="league">
         <h2>Platino</h2>
         <img src="platino.png" alt="">
-        <p>Precio: $XX</p>
+        <p>Precio: 150$</p>
     </section>
 
     <section class="league">
         <h2>Esmeralda</h2>
         <img src="esmeralda (1) (1).png" alt="">
-        <p>Precio: $XX</p>
+        <p>Precio: 200$</p>
     </section>
 
     <section class="league">
         <h2>Diamante</h2>
         <img src="diamante.png" alt="">
-        <p>Precio: $XX</p>
+        <p>Precio: 300$</p>
     </section>
 
     <section class="league">
         <h2>Master</h2>
         <img src="master.png" alt="">
-        <p>Precio: $XX</p>
+        <p>Precio: 500$</p>
     </section>
 
     <section class="league">
         <h2>Grandmaster</h2>
         <img src="grandmaster.png" alt="">
-        <p>Precio: $XX</p>
+        <p>Precio: 550$</p>
     </section>
 
     <section class="league">
         <h2>Challenger</h2>
         <img src="challenger.png" alt="">
-        <p>Precio: $XX</p>
+        <p>Precio: 600$</p>
     </section>
 
     <footer>
