--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         <li><b>Mi CV:</b> <a href = "https://juanjose130303.github.io/html/css/FLEX/otro-review.html" target = "_blank">ejercicio 1</a></li>
         <li><b>Mi CV:</b> <a href = "https://juanjose130303.github.io/html/css/FLEX/review-15.html" target = "_blank">ejercicio review</a></li>
         <li><b>elo boost</b> <a href = "https://juanjose130303.github.io/html/css/proyecto/index.html" target = "_blank">proyecto elo boost</a></li>
+        <li><b>enium</b> <a href = "https://juanjose130303.github.io/html/filtro/index.html" target = "_blank">filtro enium</a></li>
+
         </ul>
 </body>
 </html> 
